[package]
name = "triox"
version = "0.1.0"
authors = ["Aaron Erhardt <aaron.erhardt@t-online.de>", "Aravinth Manivannan <realaravinth@batsense.net>"]
edition = "2021"
description = "An open source cloud server that focuses on speed, reliability and security"
repository = "https://github.com/Trioxidation/Triox"
readme = "README.md"
license = "AGPL-3.0-or-later"
build = "build.rs"
default-run = "triox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "triox"
path = "./src/main.rs"

[[bin]]
name = "tests-migrate"
path = "./src/tests-migrate.rs"

[dependencies]
